--- a/android_nfc_read_write/app/build.gradle
+++ b/android_nfc_read_write/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:appcompat-v7:23.1.0'
     implementation 'com.android.support:design:23.1.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
