--- a/BuzzBraceletVendor/app/src/main/AndroidManifest.xml
+++ b/BuzzBraceletVendor/app/src/main/AndroidManifest.xml
@@ -55,6 +55,9 @@
                 <data android:mimeType="*/*" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
