--- a/BuzzBraceletAdmin/app/src/main/AndroidManifest.xml
+++ b/BuzzBraceletAdmin/app/src/main/AndroidManifest.xml
@@ -15,9 +15,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/buzz_bracelet"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/buzz_bracelet"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
